# hunter

cmake/configs/: default.cmake
cmake/projects/hunter_test_case_0/: hunter.cmake
examples/hunter_test_case_0/: CMakeLists.txt  foo.cpp
